--- a/Contato.html
+++ b/Contato.html
@@ -19,7 +19,8 @@
                     <ul>
                         <li><a href="index.html">Quem Somos</a></li>
                         <li><a href="sistema.html">Sistema</a></li>
-                        <li><a href="sistema.html">Integração</a></li>
+                        <li><a href="integração.html">Integração</a></li>
+                        <li><a href="Parceiros.html">Parceiros</a></li>
                         <li><a href="Contato.html">Contato</a></li>
                     </ul>
                 </nav>
@@ -32,8 +33,9 @@
                 <nav>
                         <ul>
                             <li><a href="index.html">Quem Somos</a></li>
-                            <li><a href="integração.html">Sistema</a></li>
+                            <li><a href="sistema.html">Sistema</a></li>
                             <li><a href="integração.html">Integração</a></li>
+                            <li><a href="Parceiros.html">Parceiros</a></li>
                             <li><a href="Contato.html">Contato</a></li>
                         </ul>
                 </nav>    
