add: animation in all pages

--- a/Contato.html
+++ b/Contato.html
@@ -6,6 +6,25 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Coopig</title>
+    <style>
+        #pagecontato{
+            position: relative;
+            left: 1600px;
+            animation: moveAndReturn 1s ease-out forwards;
+        }
+
+        @keyframes moveAndReturn {
+            0% {
+                left: 1600px;
+            }
+            70% {
+                left: -30px; /* Overshoot */
+            }
+            100% {
+                left: 0px; /* Posição final */
+            }
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -43,7 +62,9 @@
         </div><!--container -->
     </header>
 
-    <section class="contato">
+    <div id="pagecontato">
+    <section class="contato" >
+
         <h3>Entre em Contato</h3>
         <div class="container">
             <div class="boxContato">
@@ -126,6 +147,7 @@
         </div>
 
     </footer>
+</div>
 
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
   
