--- a/Parceiros.html
+++ b/Parceiros.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Coopig</title>
@@ -60,99 +61,26 @@
         </div>
     </section><!-- banner -->
 
-    <section id="solucao">
+    <section class="logoParceiros">
+        <h3 data-aos="fade-up">Nosso parceiros</h3>
         <div class="container">
 
-            <div class="initialText">
-                <h3>Integração</h3>
-                <p>As plataformas são desenvolvidas para atender aos principais agentes que atuam na gestão da produtividade de aves e suínos e serão integradas pelos sistemas da SBR Prime juntamente com o da Roboagro.</p>
+            <div class="boxImg" data-aos="zoom-in" data-aos-delay="100">
+                <img src="Images/logoParceiros/logoPositivo.png" alt="">
             </div>
-        </div><!--container-->
-    </section>
 
-    <section class="integracao">
-        <div class="container">
-            <div class="workers">
-                <div class="wraperWorkes">
-                    <div class="function">
-                        <img src="./Images/Integracao/farmer.svg" alt="">
-                        <p class="title">PRODUTOR</p>
-                    </div>
-                    <div class="list">
-                        <ul>
-                            <li>Monitorar a granja, realizar apontamentos, ver dashboard de sensores</li>
-                            <li>Se comunicar com o técnico</li>
-                            <li>Interface de voz</li>
-                            <li>Ajuda automática passo a passo</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="wraperWorkes">
-                    <div class="function">
-                        <img src="./Images/Integracao/business-person_1332134 1.svg" alt="">
-                        <p class="title">TÉCNICO</p>
-                    </div>
-                    <div class="list">
-                        <ul>
-                            <li>Monitorar seus produtores</li>
-                            <li>Controlar agenda de visitas</li>
-                            <li>Relatórios  dos seus  produtores</li>
-                            <li>Notificações de ocorrências nas propriedades</li>
-                            <li>Troca de mensagens de orientação com produtores</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="wraperWorkes">
-                    <div class="function">
-                        <img src="./Images/Integracao/factory_4091256 1.svg " alt="">
-                        <p class="title">AGROINDÚSTRIA</p>
-                    </div>
-                    <div class="list">
-                        <ul>
-                            <li>Monitorar a granja, realizar apontamentos, ver dashboard de sensores</li>
-                            <li>Se comunicar com o técnico</li>
-                            <li>Interface de voz</li>
-                            <li>Ajuda automática passo a passo</li>
-                        </ul>
-                    </div>
-                </div>  
+            <div class="boxImg" data-aos="zoom-in" data-aos-delay="100">
+                <img src="Images/logoParceiros/logoPositivo2.png" alt="">
             </div>
-        </div>
-    </section>
 
-
-    <section class="apresentacaoIntegracao">
-        <div class="container">
-            <div class="contaienrBlog">
-                <div class="blogIntegracao">
-                    <h3>Picking Up (software de controle de armazém (WMS))</h3>
-
-                    <img src="./Images/Integracao/pickingUpBlog teste.jpg" alt="">
-
-                    <p>A integração contará com um software de controle de armazém (WMS), permitindo a organização e o rastreamento dos produtos armazenados através da tecnologia RFID e/ou QRCode. Esta solução moderna facilita a gestão dos estoques, garantindo maior controle e eficiência nos processos logísticos.</p>
-                </div>
-
-                <div class="blogIntegracao">
-                    <h3>Coopig</h3>
-
-                    <img src="./Images/Integracao/Coopig-2.jpg" alt="">
-
-                    <p>O Coopig, originário do oeste de Santa Catarina, o polo de produção de proteína animal do país, tem como objetivo aumentar a produtividade e a eficiência na produção de suínos e aves. Através de soluções inovadoras de gestão e automação, o Coopig auxilia os produtores a alcançar melhores resultados, contribuindo para o avanço do setor.</p>
-                </div>
-
-                <div class="blogIntegracao">
-                    <h3>Roboagro</h3>
-                    <div class="videoCont">
-                        <video controls src="./videos/video2Editado.mp4 "></video>
-                        <!-- <video controls src="./videos/video2.mp4"></video> -->
-                    </div>
-
-                    <p>A Roboagro representa uma revolução tecnológica aplicada à suinocultura de precisão. Este equipamento inovador é projetado para a distribuição de ração nas fases de creche, crescimento e terminação dos suínos. O alimentador automático da Roboagro trabalha com precisão, entregando a quantidade exata de ração, garantindo uma alimentação adequada e eficiente para os animais.
-                    A integração dessas plataformas proporciona uma solução completa e inovadora para os principais agentes que atuam na gestão da produtividade de aves e suínos, combinando tecnologia avançada e automação para otimizar os processos e aumentar a eficiência.</p>
-                </div>
+            <div class="boxImg" data-aos="zoom-in" data-aos-delay="100">
+                <img src="Images/logoParceiros/Logo---Sebrae.png" alt="">
             </div>
+
+            <div class="boxImg" data-aos="zoom-in" data-aos-delay="100">
+                <img src="Images/logoParceiros/LIVING LAB_Vertical_Turquesa.png" alt="">
+            </div>
+            
         </div>
     </section>
 
@@ -208,9 +136,16 @@
 
     </footer>
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     
     <script>
+        AOS.init({
+            duration: 1200,
+            easing: 'ease-in-out',
+            once: true
+        });
+
         $('.menu-mobile h3').click(function(){
             $('.menu-mobile ul').slideToggle()
         })
