--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <nav>
                     <ul>
                         <li><a href="index.html">Quem Somos</a></li>
+                        <li><a href="beneficios.html">Beneficios</a></li>
                         <li><a href="sistema.html">Sistema</a></li>
                         <li><a href="integração.html">Integração</a></li>
                         <li><a href="Parceiros.html">Parceiros</a></li>
@@ -285,7 +286,7 @@
 <section id="objetivos" class="objetivos">
         <h3>Objetivos Da Plataforma</h3>
         <div class="containerMosaico">
-            
+
             <div class="box-objetivos">
                 
                     <div class="item-1-mosaico">
