--- a/integração.html
+++ b/integração.html
@@ -11,7 +11,7 @@
     <style>
         #banner{
             left: 1600px;
-            animation: moveAndReturn 1s ease-out forwards;
+            animation: moveAndReturn .8s ease-out forwards;
         }
 
         @keyframes moveAndReturn {
