--- a/sistema.html
+++ b/sistema.html
@@ -10,7 +10,7 @@
     <style>
         #banner{
             left: 1600px;
-            animation: moveAndReturn 1s ease-out forwards;
+            animation: moveAndReturn .8s ease-out forwards;
         }
 
         @keyframes moveAndReturn {
