--- a/sistema.html
+++ b/sistema.html
@@ -25,7 +25,6 @@
             }
         }
     </style>
-    
 </head>
 <body>
     <header>
@@ -54,7 +53,7 @@
                         <ul>
                             <li><a href="index.html">Quem Somos</a></li>
                             <li><a href="sistema.html">Sistema</a></li>
-                            <li><a hretf="integração.html">Integração</a></li>
+                            <li><a href="integração.html">Integração</a></li>
                             <li><a href="Parceiros.html">Parceiros</a></li>
                             <li><a href="Contato.html">Contato</a></li>
                         </ul>
