--- a/integração.html
+++ b/integração.html
@@ -13,6 +13,11 @@
             left: 1600px;
             animation: moveAndReturn .8s ease-out forwards;
         }
+        .wraperWorkes:hover{
+            transform: translateY(-20px);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+        }
 
         @keyframes moveAndReturn {
             0% {
