--- a/Parceiros.html
+++ b/Parceiros.html
@@ -69,7 +69,7 @@
 
             <div class="container banner-container">
                 <div class="banner-text">
-                    <h2>Conectando produtores,
+                    <h2 style="font-size: clamp(10px, 5vw, 30px);">Conectando produtores,
                         técnicos e fábricas.</h2>
                     <p>Unindo Produtores, Técnicos e Fábricas <br>
                         para uma Granja de Sucesso.</p>
