--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <li><a href="beneficios.html">Beneficios</a></li>
                         <li><a href="sistema.html">Sistema</a></li>
                         <li><a href="integração.html">Integração</a></li>
-                        <li><a href="Parceiros.html">Parceiros</a></li>
+                        <!-- <li><a href="Parceiros.html">Parceiros</a></li> -->
                         <li><a href="Contato.html">Contato</a></li>
                     </ul>
                 </nav>
@@ -57,7 +57,7 @@
                             <li><a href="index.html">Quem Somos</a></li>
                             <li><a href="sistema.html">Sistema</a></li>
                             <li><a href="integração.html">Integração</a></li>
-                            <li><a href="Parceiros.html">Parceiros</a></li>
+                            <!-- <li><a href="Parceiros.html">Parceiros</a></li> -->
                             <li><a href="Contato.html">Contato</a></li>
                         </ul>
                 </nav>    
@@ -80,11 +80,21 @@
                     </div>
                 </div>
                 <div class="image-banner">
-                    <img src="./Images/BannerParceiros.jpg" alt="Banner 2">
+                    <img src="./Images/solucao/bannerInicial2.jpg" alt="Banner 2">
                     <div class="container banner-container">
                         <div class="banner-text">
-                            <h2>Soluções Inteligentes para o seu Negócio</h2>
+                            <h2 style="font-size: clamp(10px, 5vw, 30px);">Soluções Inteligentes para o seu Negócio</h2>
                             <p>Aumente a produtividade e reduza custos com nossas soluções.</p>
+                            <button><a href="https://wa.me/556781775552?text=">Saiba Mais</a></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="image-banner">
+                    <img src="./Images/solucao/bannerInicial3.jpg" alt="Banner 2">
+                    <div class="container banner-container">
+                        <div class="banner-text">
+                            <h2 style="font-size: clamp(10px, 5vw, 30px);">Potencializando seu Negócio com Soluções Inteligentes</h2>
+                            <p>Transformando Desafios em Oportunidades com Soluções Inteligentes.</p>
                             <button><a href="https://wa.me/556781775552?text=">Saiba Mais</a></button>
                         </div>
                     </div>
@@ -308,7 +318,7 @@
             <div class="box-objetivos">
                 
                     <div class="item-1-mosaico">
-                        <img src="./Images/solucao/image1Mos.jpg" alt="">
+                        <img src="./Images/solucao/image1Mos.png" alt="">
                     </div><!-- item-1-mosaico-->
 
                     <div class="item-2-mosaico">
@@ -324,7 +334,7 @@
             <div style="flex-direction: row-reverse;" class="box-objetivos">
 
                 <div class="item-1-mosaico">
-                    <img src="./Images/solucao/image2Mos.jpg" alt="">
+                    <img src="./Images/solucao/image2   Mos.jpg" alt="">
                 </div><!-- item-1-mosaico-->
 
                 <div class="item-2-mosaico">
@@ -341,7 +351,7 @@
         <div class="box-objetivos">
             
             <div class="item-1-mosaico">
-                <img src="./Images/solucao/image3Mos.png" alt="">
+                <img src="./Images/solucao/imgMos3.png" alt="">
             </div><!-- item-1-mosaico-->
 
             <div class="item-2-mosaico">
