--- a/integração.html
+++ b/integração.html
@@ -78,11 +78,11 @@
                     </div>
                 </div>
                 <div class="image-banner">
-                    <img src="./Images/BannerParceiros.jpg" alt="Banner 2">
+                    <img src="./Images/Integracao/BannerSecondary-3.jpg" alt="Banner 2">
                     <div class="container banner-container">
                         <div class="banner-text">
-                            <h2>Soluções Inteligentes para o seu Negócio</h2>
-                            <p>Aumente a produtividade e reduza custos com nossas soluções.</p>
+                            <h2 style="font-size: clamp(10px, 5vw, 30px);">Cuidado e Dedicação no Coração da Criação</h2>
+                            <p>Trabalhando Juntos para um Futuro Sustentável e Próspero na Pecuária</p>
                             <button><a href="https://wa.me/556781775552?text=">Saiba Mais</a></button>
                         </div>
                     </div>
