--- a/sistema.html
+++ b/sistema.html
@@ -69,7 +69,7 @@
 
         <div class="container banner-container">
             <div class="banner-text">
-                <h2> Interface Inovadora e Eficiente do Sistema</h2>
+                <h2 style="font-size: clamp(10px, 5vw, 30px);"> Interface Inovadora e Eficiente do Sistema</h2>
                 <p>Maximize o Potencial da Sua Granja <br> com Soluções Inteligentes e Práticas</p>
             </div>
         </div>
