--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                 <nav>
                     <ul>
                         <li><a href="index.html">Quem Somos</a></li>
-                        <li><a href="beneficios.html">Beneficios</a></li>
+                        <!-- <li><a href="beneficios.html">Beneficios</a></li> -->
                         <li><a href="sistema.html">Sistema</a></li>
                         <li><a href="integração.html">Integração</a></li>
-                        <!-- <li><a href="Parceiros.html">Parceiros</a></li> -->
+                        <li><a href="Parceiros.html">Parceiros</a></li>
                         <li><a href="Contato.html">Contato</a></li>
                     </ul>
                 </nav>
@@ -57,7 +57,7 @@
                             <li><a href="index.html">Quem Somos</a></li>
                             <li><a href="sistema.html">Sistema</a></li>
                             <li><a href="integração.html">Integração</a></li>
-                            <!-- <li><a href="Parceiros.html">Parceiros</a></li> -->
+                            <li><a href="Parceiros.html">Parceiros</a></li> 
                             <li><a href="Contato.html">Contato</a></li>
                         </ul>
                 </nav>    
@@ -334,7 +334,7 @@
             <div style="flex-direction: row-reverse;" class="box-objetivos">
 
                 <div class="item-1-mosaico">
-                    <img src="./Images/solucao/image2   Mos.jpg" alt="">
+                    <img src="./Images/solucao/image2Mos.jpg" alt="">
                 </div><!-- item-1-mosaico-->
 
                 <div class="item-2-mosaico">
