--- a/Parceiros.html
+++ b/Parceiros.html
@@ -99,6 +99,13 @@
                 <img src="Images/logoParceiros/LIVING LAB_Vertical_Turquesa.png" alt="">
             </div>
             
+            <div class="boxImg" data-aos="zoom-in" data-aos-delay="100">
+                <img src="Images/logoParceiros/fundect_logo-01.png" alt="">
+            </div>
+
+            <div class="boxImg" data-aos="zoom-in" data-aos-delay="100">
+                <img src="Images/logoParceiros/SEMADESC_LOGO.png" alt="">
+            </div>
         </div>
     </section>
 
@@ -116,6 +123,7 @@
                     <p>CONHEÇA NOSSAS SOLUÇÕES</p>
                     <div class="logosSolucoes">
                         <a href="https://wa.me/556781775552?text="><img src="./Images/PickingUp.png" alt=""></a>
+                        <a href="https://wa.me/556781775552?text="><img src="./Images/LogoSBRCargo-5.svg" alt=""></a>
                     </div>
                 </div>
             </div>
