--- a/sistema.html
+++ b/sistema.html
@@ -199,6 +199,7 @@
                     <p>CONHEÇA NOSSAS SOLUÇÕES</p>
                     <div class="logosSolucoes">
                         <a href="https://wa.me/556781775552?text="><img src="./Images/PickingUp.png" alt=""></a>
+                        <a href="https://wa.me/556781775552?text="><img src="./Images/LogoSBRCargo-5.svg" alt=""></a>
                     </div>
                 </div>
             </div>
