--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="O Coopig nasceu no oeste de Santa Catarina, o polo de produção de proteína animal do país. Auxiliamos a aumentar a produtividade e eficiência na produção de suínos e aves através de soluções inovadoras de gestão e automação.">
+    <meta name="description" content="O Coopig aumenta a produtividade e eficiência na produção de suínos e aves com soluções inovadoras de gestão e automação. Saiba mais.">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/glider-js/1.7.7/glider.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
-    <title>Coopig</title>
+    <title>Coopig - Inovação e Eficiência na Gestão de Granjas</title>
     <style>
         #banner{
             left: 1600px;
@@ -65,67 +65,68 @@
         </div><!--container -->
     </header>
 
-    <section id="banner">
-        <div class="glider-contain">
-            <div class="glider">
-                <div class="image-banner">
-                    <img src="./Images/solucao/bannerInicial.jpg" alt="Banner 1">
-                    <div class="container banner-container">
-                        <div class="banner-text">
-                            <h2 style="font-size: clamp(10px, 5vw, 30px);">Inovação e eficiência na gestão de granjas</h2>
-                            <p>Gerenciando sua Granja com Eficiência,<br>
-                                transformando seus desafios em oportunidades</p>
-                            <button><a href="https://wa.me/556781775552?text=">Contrate Agora!</a></button>
-                        </div>
+<section id="banner">
+    <div class="glider-contain">
+        <div class="glider">
+            <div class="image-banner">
+                <img src="./Images/solucao/bannerInicial.jpg" alt="Pessoa Olhando Aplicativo Coopig">
+                <div class="container banner-container">
+                    <div class="banner-text">
+                        <h2 style="font-size: clamp(10px, 5vw, 30px);">Inovação e eficiência na gestão de granjas</h2>
+                        <p>Gerenciando sua Granja com Eficiência,<br>
+                            transformando seus desafios em oportunidades</p>
+                        <button><a href="https://wa.me/556781775552?text=">Contrate Agora!</a></button>
                     </div>
                 </div>
-                <div class="image-banner">
-                    <img src="./Images/solucao/bannerInicial2.jpg" alt="Banner 2">
-                    <div class="container banner-container">
-                        <div class="banner-text">
-                            <h2 style="font-size: clamp(10px, 5vw, 30px);">Soluções Inteligentes para o seu Negócio</h2>
-                            <p>Aumente a produtividade e reduza custos com nossas soluções.</p>
-                            <button><a href="https://wa.me/556781775552?text=">Saiba Mais</a></button>
-                        </div>
-                    </div>
-                </div>
-                <div class="image-banner">
-                    <img src="./Images/solucao/bannerInicial3.jpg" alt="Banner 2">
-                    <div class="container banner-container">
-                        <div class="banner-text">
-                            <h2 style="font-size: clamp(10px, 5vw, 30px);">Potencializando seu Negócio com Soluções Inteligentes</h2>
-                            <p>Transformando Desafios em Oportunidades com Soluções Inteligentes.</p>
-                            <button><a href="https://wa.me/556781775552?text=">Saiba Mais</a></button>
-                        </div>
-                    </div>
-                </div>
-                <!-- Adicione mais slides conforme necessário -->
             </div>
-            <button aria-label="Previous" class="glider-prev">«</button>
-            <button aria-label="Next" class="glider-next">»</button>
-
+            <div class="image-banner">
+                <img src="./Images/solucao/bannerInicial2.jpg" alt="Mulher olhando tablet em uma granja">
+                <div class="container banner-container">
+                    <div class="banner-text">
+                        <h2 style="font-size: clamp(10px, 5vw, 30px);">Soluções Inteligentes para o seu Negócio</h2>
+                        <p>Aumente a produtividade e reduza custos com nossas soluções.</p>
+                        <button><a href="https://wa.me/556781775552?text=">Saiba Mais</a></button>
+                    </div>
+                </div>
+            </div>
+            <div class="image-banner">
+                <img src="./Images/solucao/bannerInicial3.jpg" alt="Homem mostrando tablet com aplicativo coopig">
+                <div class="container banner-container">
+                    <div class="banner-text">
+                        <h2 style="font-size: clamp(10px, 5vw, 30px);">Potencializando seu Negócio com Soluções Inteligentes</h2>
+                        <p>Transformando Desafios em Oportunidades com Soluções Inteligentes.</p>
+                        <button><a href="sistema.html">Saiba Mais</a></button>
+                    </div>
+                </div>
+            </div>
+            <!-- Adicione mais slides conforme necessário -->
         </div>
-    </section>
+        <button aria-label="Previous" class="glider-prev">«</button>
+        <button aria-label="Next" class="glider-next">»</button>
 
-    <!-- <section id="banner">
-        <div class="image-banner">
+    </div>
+</section>
 
-            <img src="./Images/solucao/bannerInicial.jpg" alt="">
+<!-- <section id="banner">
+    <div class="image-banner">
 
-        <div class="container banner-container">
-            <div class="banner-text">
-                <h2>Inovação e eficiência na 
-                    gestão de granjas</h2>
-                <p>Gerenciando sua Granja com Eficiência,<br>
-                    transformando seus desafios em oportunidades</p>
-                <button><a href="https://wa.me/556781775552?text=">Contrate Agora!</a></button>
-            </div>
+        <img src="./Images/solucao/bannerInicial.jpg" alt="">
+
+    <div class="container banner-container">
+        <div class="banner-text">
+            <h2>Inovação e eficiência na 
+                gestão de granjas</h2>
+            <p>Gerenciando sua Granja com Eficiência,<br>
+                transformando seus desafios em oportunidades</p>
+            <button><a href="https://wa.me/556781775552?text=">Contrate Agora!</a></button>
         </div>
     </div>
+</div>
 </section> -->
 
+<main>
 <section class="sbr">
-    <div class="container">
+        <div class="container">
             <div data-aos="fade-up" class="sbr">
                 <h3>Quem Somos?</h3>
                 <!-- <p>SBR PRIME, empresa que atua há 13 anos no mercado focada em integrar inovação e transparência para redefinir os padrões da rastreabilidade por meio da tecnologia blockchain. Combinamos experiência em tecnologia, logística e segurança da informação para criar soluções que transformam a maneira como os negócios gerenciam e rastreiam seus produtos.
@@ -133,7 +134,7 @@
 
                 <video controls src="./videos/quemSomos4.mp4"></video>
             </div>
-    </div>
+        </div>
 </section>
 
 <section id="solucao" class="solucao">
@@ -381,7 +382,7 @@
             
         </div>
     </section>
-
+</main>
 
 
     <footer>
