--- a/Contato.html
+++ b/Contato.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Entre em contato com a equipe SBR Prime. Obtenha informações sobre nossas soluções SaaS, incluindo COOPIG, Picking Up e SBR Cargo.">
+    <meta name="keywords" content="COOPIG, SBR Prime, Picking Up, SBR Cargo, contato, soluções SaaS">
+    <meta name="author" content="SBR Prime">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
-    <title>Coopig</title>
+    <title>Contato Time Sbr Prime</title>
     <style>
         #pagecontato{
             position: relative;
@@ -31,7 +34,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="./Images/LOGO_COOPIG_V002.svg" alt="">
+                <img src="./Images/LOGO_COOPIG_V002.svg" alt="Logo Coopig">
             </div><!-- logo -->
 
             <div class="menu-desktop">
@@ -39,7 +42,7 @@
                     <ul>
                         <li><a href="index.html">Quem Somos</a></li>
                         <li><a href="sistema.html">Sistema</a></li>
-                        <li><a href="integração.html">Integração</a></li>
+                        <li><a href="integracao.html">Integração</a></li>
                         <li><a href="Parceiros.html">Parceiros</a></li>
                         <li><a href="Contato.html">Contato</a></li>
                     </ul>
@@ -54,7 +57,7 @@
                         <ul>
                             <li><a href="index.html">Quem Somos</a></li>
                             <li><a href="sistema.html">Sistema</a></li>
-                            <li><a href="integração.html">Integração</a></li>
+                            <li><a href="integracao.html">Integração</a></li>
                             <li><a href="Parceiros.html">Parceiros</a></li>
                             <li><a href="Contato.html">Contato</a></li>
                         </ul>
@@ -71,7 +74,7 @@
             <div class="boxContato">
                 <div class="wraperMaps">
                     
-                    <img src="./Images/contato.jpg" alt="">
+                    <img src="./Images/contato.jpg" alt="Contato">
                     
                     <div class="socialMedia">
                         <a href="https://www.instagram.com/sbrprime/?hl=pt-br"><i class="fa-brands fa-instagram"></i> @sbrprime</a>
@@ -111,14 +114,14 @@
                 <div class="pickingUp">
                     <p>CONHEÇA NOSSAS SOLUÇÕES</p>
                     <div class="logosSolucoes">
-                        <a href="https://wa.me/556781775552?text="><img src="./Images/PickingUp.png" alt=""></a>
-                        <a href="https://wa.me/556781775552?text="><img src="./Images/LogoSBRCargo-5.svg" alt=""></a>
+                        <a href="https://wa.me/556781775552?text="><img src="./Images/PickingUp.png" alt="Logo Picking Up"></a>
+                        <a href="https://wa.me/556781775552?text="><img src="./Images/LogoSBRCargo-5.svg" alt="Logo Sbr Cargo"></a>
                     </div>
                 </div>
             </div>
 
             <div class="redes">
-                <img src="./Images/logoSBRBranca.png" alt="">
+                <img src="./Images/logoSBRBranca.png" alt="Logo Sbr Prime">
             </div>  
 
             <div class="formContato">
