--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="O Coopig aumenta a produtividade e eficiência na produção de suínos e aves com soluções inovadoras de gestão e automação. Saiba mais.">
+    <meta name="keywords" content="COOPIG, SBR Prime, Picking Up, SBR Cargo, contato, soluções SaaS">
+    <meta name="author" content="SBR Prime">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/glider-js/1.7.7/glider.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -41,7 +43,7 @@
                         <li><a href="index.html">Quem Somos</a></li>
                          <!--  <li><a href="beneficios.html">Beneficios</a></li>-->
                         <li><a href="sistema.html">Sistema</a></li>
-                        <li><a href="integração.html">Integração</a></li>
+                        <li><a href="integracao.html">Integração</a></li>
                         <li><a href="Parceiros.html">Parceiros</a></li> 
                         <li><a href="Contato.html">Contato</a></li>
                     </ul>
@@ -56,7 +58,7 @@
                         <ul>
                             <li><a href="index.html">Quem Somos</a></li>
                             <li><a href="sistema.html">Sistema</a></li>
-                            <li><a href="integração.html">Integração</a></li>
+                            <li><a href="integracao.html">Integração</a></li>
                             <li><a href="Parceiros.html">Parceiros</a></li> 
                             <li><a href="Contato.html">Contato</a></li>
                         </ul>
