--- a/integracao.html
+++ b/integracao.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Entre em contato com a SBR Prime e descubra nossas soluções SaaS para gerenciamento de granjas e integração de produtores, técnicos e fábricas.">
+    <meta name="keywords" content="COOPIG, SBR Prime, Picking Up, SBR Cargo, contato, soluções SaaS">
+    <meta name="author" content="SBR Prime">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/glider-js/1.7.7/glider.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
-    <title>Coopig</title>
+    <title>Integração de colaboradores</title>
     <style>
         #banner{
             left: 1600px;
@@ -36,7 +39,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="./Images/LOGO_COOPIG_V002.svg" alt="">
+                <img src="./Images/LOGO_COOPIG_V002.svg" alt="Logo Coopig">
             </div><!-- logo -->
 
             <div class="menu-desktop">
@@ -44,7 +47,7 @@
                     <ul>
                         <li><a href="index.html">Quem Somos</a></li>
                         <li><a href="sistema.html">Sistema</a></li>
-                        <li><a href="integração.html">Integração</a></li>
+                        <li><a href="integracao.html">Integração</a></li>
                         <li><a href="Parceiros.html">Parceiros</a></li>
                         <li><a href="Contato.html">Contato</a></li>
                     </ul>
@@ -59,7 +62,7 @@
                         <ul>
                             <li><a href="index.html">Quem Somos</a></li>
                             <li><a href="sistema.html">Sistema</a></li>
-                            <li><a href="integração.html">Integração</a></li>
+                            <li><a href="integracao.html">Integração</a></li>
                             <li><a href="Parceiros.html">Parceiros</a></li>
                             <li><a href="Contato.html">Contato</a></li>
                         </ul>
@@ -72,7 +75,7 @@
         <div class="glider-contain">
             <div class="glider">
                 <div class="image-banner">
-                    <img src="./Images/Integracao/BannerSecondary-2.jpg" alt="Banner 1">
+                    <img src="./Images/Integracao/BannerSecondary-2.jpg" alt="Banner Integração">
                     <div class="container banner-container">
                         <div class="banner-text">
                             <h2 style="font-size: clamp(10px, 5vw, 30px);">Inovação e eficiência na gestão de granjas</h2>
@@ -83,7 +86,7 @@
                     </div>
                 </div>
                 <div class="image-banner">
-                    <img src="./Images/Integracao/BannerSecondary-3.jpg" alt="Banner 2">
+                    <img src="./Images/Integracao/BannerSecondary-3.jpg" alt="Banner Integração De Funcionários">
                     <div class="container banner-container">
                         <div class="banner-text">
                             <h2 style="font-size: clamp(10px, 5vw, 30px);">Cuidado e Dedicação no Coração da Criação</h2>
@@ -99,7 +102,7 @@
 
         </div>
     </section>
-
+<main>
     <section id="solucao">
         <div class="container">
 
@@ -115,7 +118,7 @@
             <div class="workers">
                 <div class="wraperWorkes">
                     <div class="function">
-                        <img src="./Images/Integracao/farmer.svg" alt="">
+                        <img src="./Images/Integracao/farmer.svg" alt="Icone Fazendeiro">
                         <p class="title">PRODUTOR</p>
                     </div>
                     <div class="list">
@@ -130,7 +133,7 @@
 
                 <div class="wraperWorkes">
                     <div class="function">
-                        <img src="./Images/Integracao/business-person_1332134 1.svg" alt="">
+                        <img src="./Images/Integracao/business-person_1332134 1.svg" alt="Icone Técnico">
                         <p class="title">TÉCNICO</p>
                     </div>
                     <div class="list">
@@ -146,7 +149,7 @@
 
                 <div class="wraperWorkes">
                     <div class="function">
-                        <img src="./Images/Integracao/factory_4091256 1.svg " alt="">
+                        <img src="./Images/Integracao/factory_4091256 1.svg " alt="Icone Fábrica">
                         <p class="title">AGROINDÚSTRIA</p>
                     </div>
                     <div class="list">
@@ -169,7 +172,7 @@
                 <div class="blogIntegracao">
                     <h3>Picking Up (software de controle de armazém (WMS))</h3>
 
-                    <img src="./Images/Integracao/pickingUpBlog teste.jpg" alt="">
+                    <img src="./Images/Integracao/pickingUpBlog teste.jpg" alt="Armazém Com Rastrabilidade">
 
                     <p>A integração contará com um software de controle de armazém (WMS), permitindo a organização e o rastreamento dos produtos armazenados através da tecnologia RFID e/ou QRCode. Esta solução moderna facilita a gestão dos estoques, garantindo maior controle e eficiência nos processos logísticos.</p>
                 </div>
@@ -177,7 +180,7 @@
                 <div class="blogIntegracao">
                     <h3>Coopig</h3>
 
-                    <img src="./Images/Integracao/Coopig-2.jpg" alt="">
+                    <img src="./Images/Integracao/Coopig-2.jpg" alt="Coopig em uso">
 
                     <p>O Coopig, originário do oeste de Santa Catarina, o polo de produção de proteína animal do país, tem como objetivo aumentar a produtividade e a eficiência na produção de suínos e aves. Através de soluções inovadoras de gestão e automação, o Coopig auxilia os produtores a alcançar melhores resultados, contribuindo para o avanço do setor.</p>
                 </div>
@@ -195,6 +198,7 @@
             </div>
         </div>
     </section>
+</main>
 
     <footer>
         <div class="container">
@@ -209,14 +213,14 @@
                 <div class="pickingUp">
                     <p>CONHEÇA NOSSAS SOLUÇÕES</p>
                     <div class="logosSolucoes">
-                        <a href="https://wa.me/556781775552?text="><img src="./Images/PickingUp.png" alt=""></a>
-                        <a href="https://wa.me/556781775552?text="><img src="./Images/LogoSBRCargo-5.svg" alt=""></a>
+                        <a href="https://wa.me/556781775552?text="><img src="./Images/PickingUp.png" alt="Logo Picking Up"></a>
+                        <a href="https://wa.me/556781775552?text="><img src="./Images/LogoSBRCargo-5.svg" alt="Logo Sbr Cargo"></a>
                     </div>
                 </div>
             </div>
 
             <div class="redes">
-                <img src="./Images/logoSBRBranca.png" alt="">
+                <img src="./Images/logoSBRBranca.png" alt="Logo Sbr Prime">
 
             </div>
 
