--- a/sistema.html
+++ b/sistema.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Entre em contato com a SBR Prime e descubra nossas soluções SaaS para gerenciamento de granjas e integração de produtores, técnicos e fábricas.">
+    <meta name="keywords" content="COOPIG, SBR Prime, Picking Up, SBR Cargo, contato, soluções SaaS">
+    <meta name="author" content="SBR Prime">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
-    <title>Coopig</title>
+    <title>Telas do sistema Coopig</title>
     <style>
         #banner{
             left: 1600px;
@@ -30,7 +33,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="./Images/LOGO_COOPIG_V002.svg" alt="">
+                <img src="./Images/LOGO_COOPIG_V002.svg" alt="Logo Coopig">
             </div><!-- logo -->
 
             <div class="menu-desktop">
@@ -38,7 +41,7 @@
                     <ul>
                         <li><a href="index.html">Quem Somos</a></li>
                         <li><a href="sistema.html">Sistema</a></li>
-                        <li><a href="integração.html">Integração</a></li>
+                        <li><a href="integracao.html">Integração</a></li>
                         <li><a href="Parceiros.html">Parceiros</a></li>
                         <li><a href="Contato.html">Contato</a></li>
                     </ul>
@@ -53,7 +56,7 @@
                         <ul>
                             <li><a href="index.html">Quem Somos</a></li>
                             <li><a href="sistema.html">Sistema</a></li>
-                            <li><a href="integração.html">Integração</a></li>
+                            <li><a href="integracao.html">Integração</a></li>
                             <li><a href="Parceiros.html">Parceiros</a></li>
                             <li><a href="Contato.html">Contato</a></li>
                         </ul>
@@ -65,7 +68,7 @@
     <section id="banner">
         <div class="image-banner">
 
-            <img src="./Images/BannerSistema.jpg" alt="">
+            <img src="./Images/BannerSistema.jpg" alt="Banner Sistema">
 
         <div class="container banner-container">
             <div class="banner-text">
@@ -76,7 +79,7 @@
     </div>
 </section><!-- banner -->
 
-
+<main>
     <section class="sbr">
         <div class="container">
             <div data-aos="fade-up" class="sbr">
@@ -96,7 +99,7 @@
                         <div data-aos="fade-right">
                             <h3>Painel Do Técnico</h3>
 
-                            <img src="./Images/Sistema/PainelTécnico.png" alt="">
+                            <img src="./Images/Sistema/PainelTécnico.png" alt="Painel Do Técnico Coopig">
                         </div>
 
                         <div data-aos="fade-right">
@@ -113,7 +116,7 @@
                         <div data-aos="fade-left">
                             <h3>Painel De Relatório Do Técnico</h3>
 
-                            <img src="./Images/Sistema/RelatorioTecnico.png" alt="">
+                            <img src="./Images/Sistema/RelatorioTecnico.png" alt="Relatórios Do Técnico">
                         </div>
                         
                         <div data-aos="fade-left">
@@ -127,7 +130,7 @@
                     <div data-aos="fade-right">
                         <h3>Painel Do Produtor</h3>
 
-                        <img src="./Images/Sistema/PainelProdutor.png" alt="">
+                        <img src="./Images/Sistema/PainelProdutor.png" alt="Painel Do Produtor">
                     </div>
 
                     <div data-aos="fade-right">
@@ -141,7 +144,7 @@
                     <div data-aos="fade-left">
                         <h3>Painel Do Produtor Maternidade</h3>
 
-                        <img src="./Images/Sistema/PainelDoProdutorMaternidade.png" alt="">
+                        <img src="./Images/Sistema/PainelDoProdutorMaternidade.png" alt="Painel Produtor Maternidade">
                     </div>
                     <div data-aos="fade-left">
                         <div class="texto">
@@ -154,7 +157,7 @@
                     <div data-aos="fade-right">
                         <h3>Painel Do Gestor</h3>
 
-                        <img src="./Images/Sistema/PainelDoGestor.png" alt="">
+                        <img src="./Images/Sistema/PainelDoGestor.png" alt="Painel Do Gestor">
                     </div>
 
                     <div data-aos="fade-right">
@@ -169,7 +172,7 @@
                     <div data-aos="fade-left">
                         <h3>Painel De Relatórios Do Gestor</h3>
 
-                        <img src="./Images/Sistema/GestorCooperativa.png    " alt="">
+                        <img src="./Images/Sistema/GestorCooperativa.png" alt="Painel Do Gestor Cooperativa">
                     </div>
 
                     <div data-aos="fade-left">
@@ -183,7 +186,7 @@
         </div>
     </section>
 
-
+</main>
 
     <footer>
         <div class="container">
@@ -198,14 +201,14 @@
                 <div class="pickingUp">
                     <p>CONHEÇA NOSSAS SOLUÇÕES</p>
                     <div class="logosSolucoes">
-                        <a href="https://wa.me/556781775552?text="><img src="./Images/PickingUp.png" alt=""></a>
-                        <a href="https://wa.me/556781775552?text="><img src="./Images/LogoSBRCargo-5.svg" alt=""></a>
+                        <a href="https://wa.me/556781775552?text="><img src="./Images/PickingUp.png" alt="Logo Picking Up"></a>
+                        <a href="https://wa.me/556781775552?text="><img src="./Images/LogoSBRCargo-5.svg" alt="Logo Sbr Cargo"></a>
                     </div>
                 </div>
             </div>
 
             <div class="redes">
-                <img src="./Images/logoSBRBranca.png" alt="">
+                <img src="./Images/logoSBRBranca.png" alt="Logo Sbr Prime">
             </div>
 
             <div class="formContato">
