--- a/Parceiros.html
+++ b/Parceiros.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Entre em contato com a SBR Prime e descubra nossas soluções SaaS para gerenciamento de granjas e integração de produtores, técnicos e fábricas.">
+    <meta name="keywords" content="COOPIG, SBR Prime, Picking Up, SBR Cargo, contato, soluções SaaS">
+    <meta name="author" content="SBR Prime">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
@@ -30,7 +33,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="./Images/LOGO_COOPIG_V002.svg" alt="">
+                <img src="./Images/LOGO_COOPIG_V002.svg" alt="Logo Coopig">
             </div><!-- logo -->
 
             <div class="menu-desktop">
@@ -38,7 +41,7 @@
                     <ul>
                         <li><a href="index.html">Quem Somos</a></li>
                         <li><a href="sistema.html">Sistema</a></li>
-                        <li><a href="integração.html">Integração</a></li>
+                        <li><a href="integracao.html">Integração</a></li>
                         <li><a href="Parceiros.html">Parceiros</a></li>
                         <li><a href="Contato.html">Contato</a></li>
                     </ul>
@@ -53,7 +56,7 @@
                         <ul>
                             <li><a href="index.html">Quem Somos</a></li>
                             <li><a href="sistema.html">Sistema</a></li>
-                            <li><a href="integração.html">Integração</a></li>
+                            <li><a href="integracao.html">Integração</a></li>
                             <li><a href="Parceiros.html">Parceiros</a></li>
                             <li><a href="Contato.html">Contato</a></li>
                         </ul>
@@ -65,7 +68,7 @@
     <section id="banner">
             <div class="image-banner">
 
-                <img src="./Images/BannerParceiros.jpg" alt="">
+                <img src="./Images/BannerParceiros.jpg" alt="Parceiros">
 
             <div class="container banner-container">
                 <div class="banner-text">
@@ -84,27 +87,27 @@
         <div class="container" >
 
             <div class="boxImg" data-aos="zoom-in" data-aos-delay="100">
-                <img src="Images/logoParceiros/logoPositivo.png" alt="">
+                <img src="Images/logoParceiros/logoPositivo.png" alt="Positivo">
             </div>
 
             <div class="boxImg" data-aos="zoom-in" data-aos-delay="100">
-                <img src="Images/logoParceiros/logoPositivo2.png" alt="">
+                <img src="Images/logoParceiros/logoPositivo2.png" alt="Positivo Seg">
             </div>
 
             <div class="boxImg" data-aos="zoom-in" data-aos-delay="100">
-                <img src="Images/logoParceiros/Logo---Sebrae.png" alt="">
+                <img src="Images/logoParceiros/Logo---Sebrae.png" alt="Sebrae">
             </div>
 
             <div class="boxImg" data-aos="zoom-in" data-aos-delay="100">
-                <img src="Images/logoParceiros/LIVING LAB_Vertical_Turquesa.png" alt="">
+                <img src="Images/logoParceiros/LIVING LAB_Vertical_Turquesa.png" alt="Living Lab">
             </div>
             
             <div class="boxImg" data-aos="zoom-in" data-aos-delay="100">
-                <img src="Images/logoParceiros/fundect_logo-01.png" alt="">
+                <img src="Images/logoParceiros/fundect_logo-01.png" alt="Fundect">
             </div>
 
             <div class="boxImg" data-aos="zoom-in" data-aos-delay="100">
-                <img src="Images/logoParceiros/SEMADESC_LOGO.png" alt="">
+                <img src="Images/logoParceiros/SEMADESC_LOGO.png" alt="SEMADESC">
             </div>
         </div>
     </section>
@@ -122,14 +125,14 @@
                 <div class="pickingUp">
                     <p>CONHEÇA NOSSAS SOLUÇÕES</p>
                     <div class="logosSolucoes">
-                        <a href="https://wa.me/556781775552?text="><img src="./Images/PickingUp.png" alt=""></a>
-                        <a href="https://wa.me/556781775552?text="><img src="./Images/LogoSBRCargo-5.svg" alt=""></a>
+                        <a href="https://wa.me/556781775552?text="><img src="./Images/PickingUp.png" alt="Logo Picking Up"></a>
+                        <a href="https://wa.me/556781775552?text="><img src="./Images/LogoSBRCargo-5.svg" alt="Logo Sbr Prime"></a>
                     </div>
                 </div>
             </div>
 
             <div class="redes">
-                <img src="./Images/logoSBRBranca.png" alt="">
+                <img src="./Images/logoSBRBranca.png" alt="logo Sbr Prime">
 
             </div>
 
