--- a/Parceiros.html
+++ b/Parceiros.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Entre em contato com a SBR Prime e descubra nossas soluções SaaS para gerenciamento de granjas e integração de produtores, técnicos e fábricas.">
     <meta name="keywords" content="COOPIG, SBR Prime, Picking Up, SBR Cargo, contato, soluções SaaS">
     <meta name="author" content="SBR Prime">
+    <link rel="icon" type="image/x-icon" href="./Images/iconSite-2.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
