--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </div>
         
             <div data-aos="zoom-in" class="imgFluxo">
-                <img src="./Images/solucao/Fluxo-2.jpg" alt="">
+                <img src="./Images/solucao/Fluxo-3.png" alt="">
             </div>
         
     </div><!--container-->
