Adicionando Termo de uso

--- a/sistema.html
+++ b/sistema.html
@@ -234,8 +234,8 @@
         <div class="container">
             <div class="termos">
                 <p>© Todos os direitos reservados</p>
-                <a href="">Termos e Condições de Uso</a>
-                <a href="">Política de Privacidade</a>
+                <a href="./termo/TERMO DE USO - SBR Prime.pdf" target="_blank">Termos e Condições de Uso</a>
+                <a href="./termo/TERMO DE USO - SBR Prime.pdf" target="_blank">Política de Privacidade</a>
             </div>
         </div>
 
