Colocando Politica de privacidade

--- a/Contato.html
+++ b/Contato.html
@@ -148,7 +148,7 @@
             <div class="termos">
                 <p>© Todos os direitos reservados</p>
                 <a href="./termo/TERMO DE USO - SBR Prime.pdf" target="_blank">Termos e Condições de Uso</a>
-                <a href="./termo/TERMO DE USO - SBR Prime.pdf" target="_blank">Política de Privacidade</a>
+                <a href="./termo/POLÍTICA DE PRIVACIDADE .docx.pdf" target="_blank">Política de Privacidade</a>
             </div>
         </div>
 
